--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name" : "mix-mall-test",
-    "appid" : "",
+    "appid" : "__UNI__A9C6BCF",
     "description" : "",
     "versionName" : "1.0.0",
     "versionCode" : "100",
